--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack --watch | webpack-dev-server --open",
     "build": "webpack"
   },
@@ -17,9 +17,41 @@
     "react-dom": "^16.1.1"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.5",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/jest": "^21.1.8",
+    "@types/jsdom": "^11.0.4",
     "awesome-typescript-loader": "^3.4.0",
+    "babel-jest": "^21.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "jest": "^21.2.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.1.1",
     "source-map-loader": "^0.2.3",
+    "ts-jest": "^21.2.3",
     "typescript": "^2.6.1",
     "webpack-dev-server": "^2.9.4"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ],
+    "setupFiles": [
+      "<rootDir>/test-shim.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/src/components/__tests__/mocks.ts"
+    ]
   }
 }
