--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,15 @@
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
+        "skipLibCheck": true,
         "module": "commonjs",
         "target": "es5",
         "jsx": "react"
     },
     "include": [
         "./src/**/*"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
