--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/es6-promise": "0.0.33",
     "@types/jest": "^21.1.8",
     "@types/jsdom": "^11.0.4",
     "awesome-typescript-loader": "^3.4.0",
